--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,32 @@
-/* Override default browser styles */
+/* override default browser styles */
 * {
   padding:0;
   margin: 0;
   box-sizing: border-box;
 }
 
+/* general styles */
+body {
+  min-height: 100vh; /* viewport height */
+  display: flex;
+  flex-direction: column;
+  /* generic project styles */
+  color:#3a3a3a;
+}
 
-/* Header */
+/* header */
 header {
   background-color:lightcoral;
 }
 
-/* Main content */
+/* main content */
 main {
   background-color:lightblue;
+  /* make main element take up any surplus space so footer is pushed down */
+  flex: 1 0 auto;
 }
 
-/* Footer */
+/* footer */
 footer {
   background-color:orange;
 }
