--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /* import Google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 
 /* using imported fonts (from Google Fonts) */
 
@@ -98,10 +99,15 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* header */
 header {
   background-color:lightcoral;
 }
+
 
 /* main content */
 main {
