--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,14 @@ h1 {
 
 /* header */
 header {
-  background-color:lightcoral;
+  background-color:#ffffff;
+  padding: 0 1rem;
+  position:fixed;
+  z-index:99;
+  width:100%;
+  box-shadow: 0 2px 2px #3a3a3a;
+  /*left &right shadow 0, top (doesn't matter)
+  and bottom shadow 2px*/, blur 2px, shadow colour 3a3a3a*/
 }
 
 
