--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,9 @@ body {
 
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
 /* header */
@@ -113,6 +116,11 @@ header {
   box-shadow: 0 2px 2px #3a3a3a;
   /*left &right shadow 0, top (doesn't matter)
   and bottom shadow 2px*/, blur 2px, shadow colour 3a3a3a*/
+}
+
+header a {
+  text-decoration: none;
+  color:inherit;
 }
 
 
