--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,18 @@ header a {
   color:inherit;
 }
 
+#menu {
+  font-size: 110%;
+  letter-spacing: 4px;
+}
+
+#menu ul {
+  list-style-type: none;
+}
+
+.active {
+  border-bottom: 1px solid #3a3a3a; 
+}
 
 /* main content */
 main {
