--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ header a {
   letter-spacing: 4px;
 }
 
-#menu ul {
+#menu {
   list-style-type: none;
 }
 
@@ -179,4 +179,28 @@ main {
 /* footer */
 footer {
   background-color:orange;
+}
+
+/* media query: tablets and larger (769px and up) */
+@media screen and (min-width: 768px) {
+  /* Header */
+  nav {
+   display: block;
+   position: relative;
+   box-shadow: none;
+   width: fit-content;
+   padding-right: 1rem;
+  }
+
+  #menu {
+    display:flex;
+  }
+
+  #menu > li {
+    padding-left: 1rem;
+  }
+
+  .nav-toggle-label {
+    display: none;
+  }
 }
