underline nav links on hover for larger screens
laptops and desktops, 992 px or larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,3 +216,10 @@ footer {
     margin-top: 79px;
   }
 }
+
+/* laptops and desktops: make nav links underlined when hovered over */
+@media screen and (min-width: 992px) {
+  a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
+}
