--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,12 +168,19 @@ nav{
 .nav-toggle-label{
   font-size: 2rem;
 }
+
 /* main content */
 main {
-  background-color:lightblue;
   /* make main element take up any surplus space so footer is pushed down */
   flex: 1 0 auto;
   margin-top: 47px;
+}
+
+/* hero section */
+#hero {
+  height: 600px;
+  width: 100%;
+  background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 
 /* footer */
