--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-h1 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -181,6 +181,23 @@ main {
   height: 600px;
   width: 100%;
   background: url("../images/hero-image.webp") no-repeat center center/cover;
+  position:relative;
+}
+
+#cover-text {
+  /* final rgba value sets the opacity to be slightly transparent */
+  background-color: rgba(241, 109, 107, .7);
+  font-size: 130%;
+  position:absolute;
+  bottom: 30px;
+  width: 80%;
+  min-height: 200px;
+  padding-top: 40px;
+  padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+  color:white;
 }
 
 /* footer */
@@ -232,11 +249,18 @@ main {
     /* push main content down to accommodate larger header */
     margin-top: 79px;
   }
-}
+
+  /* hero text */
+  #cover-text {
+    width: 300px;
+    right: 50px;
+  }
+}/* end of media query: tablets and larger (769px and up) */
+
 
 /* laptops and desktops: make nav links underlined when hovered over */
 @media screen and (min-width: 992px) {
   a:hover {
     border-bottom: 1px solid #3a3a3a;
   }
-}
+}/* end of media query: laptops and desktops (992px and up) */
