--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,32 @@ main {
   color:white;
 }
 
+/* reasons section */
+
+#reasons {
+  width: 90%;
+  margin:20px auto;
+}
+
+#reasons > h2 {
+  font-size: 280%;
+  margin-bottom: 20px;
+  text-align:center;
+}
+
+hr {
+  border-top: 1px solid #3a3a3a;
+  margin: 5px 0;
+}
+#benefits-physical p, #benefits-mental p {
+  padding: 0 20px;
+}
+
+#benefits-physical > div, #benefits-mental > div {
+  line-height:20px;
+  margin-bottom: 20px;
+}
+
 /* footer */
 #social-networks {
   text-align: center;
