--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,32 @@ hr {
   color: #3a3a3a;
 }
 
+/* meet-up times section */
+
+#times {
+  background: url("../images/dublin-city.webp") no-repeat center center/cover;
+  /* handle responsivity without media query */
+  display:flex;
+  flex-wrap:wrap;
+}
+
+#times div {
+  color: #fafafa;
+  background-color: rgba(0, 0, 0, .6);
+  padding: 15px;
+  text-align: center;
+  /* This will not wrap on screens that are less than 400px wide.
+  Each div will fill the available space on its row */
+  flex-basis:200px;
+  flex-grow: 1;
+  /* create a grid of meetup times divs over the background image */
+  border: 2px solid white;
+}
+
+#times h3 {
+  color: #fafafa;
+}
+
 /* media query: tablets and larger (769px and up) */
 @media screen and (min-width: 768px) {
   /* Header */
