--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ h1, h2, h3 {
     color: #252525;
 }
 
+/* hide the heading from the user but keet it for SEO reasons */
+.hidden-heading {
+  display: none;
+}
+
 /* header */
 header {
   background-color:#ffffff;
